--- a/Domination/honours-project-report/mybibfile.bib
+++ b/Domination/honours-project-report/mybibfile.bib
@@ -177,4 +177,20 @@ in today's games.}},
  author = {{Image taken from}},
  title = {{$http://www.insurgencygaming.com$}},
 }
+
+@phdthesis{,
+  author = "Michael Wolf",
+  title  = "An Intelligent Artificial Player for the Game of Risk",
+  school = "Darmstadt University of Technology",
+  year   = "2005",
+  note   = "(Unpublished Doctoral Dissertation)"
+}
+
+@techreport{,
+  author      = "Juan Lozano, Dane Bratz",
+  title       = "A Risky Proposal: Designing a Risk Game Playing Agent",
+  institution = "Stanford",
+  year        = "2012",
+  note        = "(Machine Learning Final Project)"
+}
  
