--- a/Domination/honours-project-report/mybibfile.bib
+++ b/Domination/honours-project-report/mybibfile.bib
@@ -178,7 +178,7 @@ in today's games.}},
  title = {{$http://www.insurgencygaming.com$}},
 }
 
-@phdthesis{,
+@phdthesis{michaelwolf,
   author = "Michael Wolf",
   title  = "An Intelligent Artificial Player for the Game of Risk",
   school = "Darmstadt University of Technology",
@@ -186,11 +186,11 @@ in today's games.}},
   note   = "(Unpublished Doctoral Dissertation)"
 }
 
-@techreport{,
-  author      = "Juan Lozano, Dane Bratz",
-  title       = "A Risky Proposal: Designing a Risk Game Playing Agent",
+@techreport{jlozanodbratz,
+  author      = {{Juan Lozano, Dane Bratz}},
+  title       = {{A Risky Proposal: Designing a Risk Game Playing Agent}},
   institution = "Stanford",
   year        = "2012",
-  note        = "(Machine Learning Final Project)"
+  note        = {{(Machine Learning Final Project)}}
 }
  
