--- a/Domination/honours-project-report/report.tex
+++ b/Domination/honours-project-report/report.tex
@@ -118,9 +118,9 @@ It is apparent that the development of A.I. and its application in any medium of
 
 There has been some academic work done on A.I in R.I.S.K. in particular various designs of A.I players for R.I.S.K.
 
-Michael Wolf at the University of  wrote a paper titled "Development of an Intelligent Artificial Player for the Game of Risk" \textbf{[ref]} in where he claims R.I.S.K. is generally well known, but under recognised by academia. He then went on to prove that the state space for R.I.S.K is in fact infinite. 
+Michael Wolf at the University of  wrote a paper titled "Development of an Intelligent Artificial Player for the Game of Risk" \cite{michaelwolf} in where he claims R.I.S.K. is generally well known, but under recognised by academia. He then went on to prove that the state space for R.I.S.K is in fact infinite. 
 
-Other work includes that of efforts by undergraduate/graduates at Stanford on an A.I. \textbf{[ref]} agent to play R.I.S.K. They say R.I.S.K. is an interesting opportunity as it is an "intersection between traditional and modern board games".
+Other work includes that of efforts by undergraduate/graduates at Stanford on an A.I. \cite{jlozanodbratz} agent to play R.I.S.K. They say R.I.S.K. is an interesting opportunity as it is an "intersection between traditional and modern board games".
 
 Though research into plan recognition specifically in R.I.S.K to the best of our knowledge is new.
 
@@ -942,7 +942,6 @@ The concepts from this chapter can be tied together with an arbitrary example.
 }
 \caption{Risk Plan Library}
 \end{figure}
-
 
 In this example R.I.S.K map there are two explanations, Occupy-North-America-South-America (O-NA-SA) and Occupy-South-America-Africa (O-SA-A). 
 
