More report changes.

--- a/Domination/honours-project-report/mybibfile.bib
+++ b/Domination/honours-project-report/mybibfile.bib
@@ -193,4 +193,22 @@ in today's games.}},
   year        = "2012",
   note        = {{(Machine Learning Final Project)}}
 }
+
+@INPROCEEDINGS{Fagan03case-basedplan,
+    author = {{Michael Fagan and Pádraig Cunningham}},
+    title = {{Case-Based Plan Recognition in Computer Games}},
+    booktitle = {Proceedings of the Fifth ICCBR},
+    year = {2003},
+    pages = {161--170},
+    publisher = {Springer}
+}
+
+@INPROCEEDINGS{Molineaux09g.:beating,
+    author = {Matthew Molineaux and David W. Aha and Gita Sukthankar},
+    title = {G.: Beating the defense: Using plan recognition to inform learning agents},
+    booktitle = {In: Proceedings of Florida Artifical Intelligence Research Society, AAAI},
+    year = {2009},
+    pages = {337--343},
+    publisher = {Press}
+}
  
